@@ -22,6 +22,7 @@
 	usage somewhat.
 - LDraw code parser no longer complains about scientific notation.
 - Changing to draw mode while in free camera now causes the camera to be changed to top.
+- When drawing polygons, line lengths are now displayed. Added a configuration option to toggle this behavior.
 - Added config fields for default name/username/license. This data will be automatically filled
 	into forms that require such information.
 - Upon first start the configuration prompt pops up on its own, defaulting on the profile tab. This
